<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textSize="50sp" />

            <EditText
                android:id="@+id/regUsername"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/regPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/regEmail"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="30sp" />


            <EditText
                android:id="@+id/regPassword"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="30sp" />

            <Button
                android:id="@+id/regButton"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:freezesText="true"
                android:text="@string/register"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/goToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:clickable="true"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>